--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@
   margin: 0;
   padding: 0;
   font-family: 'S-CoreDream-3Light';
+  font-display: swap;
 }
 
 ul,
@@ -424,7 +425,7 @@ h1.random {
   transform: translate(-50%, -50%);
  width: 400px;
   height: 500px;
-  background: url(/img/rabbit.png) no-repeat 50% 50%;
+  background: url(img/rabbit.png) no-repeat 50% 50%;
   background-size: 130%;
   animation: animatedBackground2 3s cubic-bezier(0.19, 1, 0.22, 1);
   animation-delay: 7s;
@@ -568,7 +569,7 @@ h1.random {
 }
 
 .loader .intro h1 {
-  font-size: 140px;
+  font-size: 140px !important;
   font-weight: 200;
   color: 	#824e8f;
   font-family: "Cinzel";
